# fenicsx_vib_shells

./: .gitignore  README.md  pyproject.toml
demos/: frequency_response.py  modes.py  utils.py
src/fenicsx_vib_shells/: __init__.py  shells.py
test/: cyl.msh  mesher.py  plate.msh  square_plate.py  tbeam.msh  test_shells.py
